Fixed stylistic error in navigation page (footer was not centered)

--- a/styles.css
+++ b/styles.css
@@ -151,4 +151,5 @@ hr {
 
 footer p{
     color: var(--grey);
+    text-align: center;
 }
